--- a/translations/en.json
+++ b/translations/en.json
@@ -225,7 +225,7 @@
   "A0224" : "Yes. If you have any questions about installing and using the scripts, simply contact us through the customer service channels and the response will be sent to the email you provided at the time of purchase. Feel free to contact us!",
   "A0225" : "Will I have a guarantee?",
   "A0226" : "Yes. You have 7 days to request a refund through the platform where you made the purchase, in accordance with the applicable refund policies. If you have any questions or need more information, please contact us through the service channels. We are available to help!",
-  "A0227" : "",
+  "A0227" : "library, application, integration, automation",
   "A0228" : "",
   "A0229" : "",
   "A0230" : ""
