--- a/translations/pt-BR.json
+++ b/translations/pt-BR.json
@@ -225,7 +225,7 @@
   "A0224" : "Sim. Caso tenha alguma dúvida sobre instalação e utilização dos scripts, basta entrar em contato conosco pelos canais de atendimento e a resposta será enviada para o e-mail que você informou no momento da compra. Sinta-se à vontade para nos contatar!",
   "A0225" : "Terei uma garantia?",
   "A0226" : "Sim. Você tem 7 dias para solicitar o reembolso através da plataforma onde realizou a compra, de acordo com as políticas de reembolso aplicáveis. Caso tenha alguma dúvida ou precise de mais informações, entre em contato conosco pelos canais de atendimento. Estamos disponíveis para ajudar!",
-  "A0227" : "",
+  "A0227" : "biblioteca, aplicação, integração, automação",
   "A0228" : "",
   "A0229" : "",
   "A0230" : ""
