--- a/translations/pt-BR.json
+++ b/translations/pt-BR.json
@@ -212,7 +212,7 @@
   "A0211" : "Inscreva-se gratuitamente e descubra como nossa plataforma pode ajudar sua empresa a alcançar o próximo nível de competitividade.",
   "A0212" : "Após a confirmação do pagamento, enviaremos o arquivo para seu e-mail.",
   "A0213" : "Comprar licença",
-  "A0214" : "Respondendo a perguntas",
+  "A0214" : "Respondendo perguntas",
   "A0215" : "selo_garantia",
   "A0216" : "Garantia de 7 dias",
   "A0217" : "Ver produto",
