--- a/translations/en.json
+++ b/translations/en.json
@@ -1,231 +1,231 @@
 {
-  "A0001" : "400 Bad Request",
-  "A0002" : "401 Unauthorized",
-  "A0003" : "403 Forbidden",
-  "A0004" : "404 Not Found",
-  "A0005" : "405 Method Not Allowed",
-  "A0006" : "500 Internal Server Error",
-  "A0007" : "Access denied due to authentication rules.",
-  "A0008" : "There was an error in your request.",
-  "A0009" : "You are not allowed to access the requested URL on this server.",
-  "A0010" : "The server encountered an internal error or misconfiguration and was unable to complete your request.",
-  "A0011" : "The requested path exists. But the request method is not allowed on this path.",
-  "A0012" : "The requested URL was not found on this server.",
-  "A0013" : "This field is required.",
-  "A0014" : "Description",
-  "A0015" : "Download",
-  "A0016" : "Exit",
-  "A0017" : "Home",
-  "A0018" : "Language",
-  "A0019" : "Name",
-  "A0020" : "Search",
-  "A0021" : "Settings",
-  "A0022" : "Submit",
-  "A0023" : "User",
-  "A0024" : "Value",
-  "A0025" : "Loading...",
-  "A0026" : "Error",
-  "A0027" : "Item",
-  "A0028" : "Items",
-  "A0029" : "Page size",
-  "A0030" : "First",
-  "A0031" : "First page",
-  "A0032" : "Last",
-  "A0033" : "Last page",
-  "A0034" : "Previous",
-  "A0035" : "Previous page",
-  "A0036" : "Next",
-  "A0037" : "Next page",
-  "A0038" : "Filter column",
-  "A0039" : "Filter name",
-  "A0040" : "Filter by:",
-  "A0041" : "Close",
-  "A0042" : "Cancel",
-  "A0043" : "Confirm",
-  "A0044" : "Add",
-  "A0045" : "Delete",
-  "A0046" : "Edit",
-  "A0047" : "Yes",
-  "A0048" : "No",
-  "A0049" : "Save",
-  "A0050" : "Create",
-  "A0051" : "About",
-  "A0052" : "Help",
-  "A0053" : "Options",
-  "A0054" : "Version",
-  "A0055" : "Category",
-  "A0056" : "Find public and private APIs through the search engine.",
-  "A0057" : "My APIs",
-  "A0058" : "Add API",
-  "A0059" : "Account",
-  "A0060" : "Action",
-  "A0061" : "A link has been sent to your email.",
-  "A0062" : "Change language",
-  "A0063" : "Change password",
-  "A0064" : "Confirmation link",
-  "A0065" : "Confirm email",
-  "A0066" : "Confirm your password.",
-  "A0067" : "Confirm your registration through this link:",
-  "A0068" : "Create new account",
-  "A0069" : "Error! This email is already being used.",
-  "A0070" : "Email address has been verified",
-  "A0071" : "Email not verified",
-  "A0072" : "Enter your email and we will send you instructions to reset your password.",
-  "A0073" : "Forgot your password?",
-  "A0074" : "Full name",
-  "A0075" : "Invalid email address",
-  "A0076" : "Invalid password",
-  "A0077" : "Invalid token",
-  "A0078" : "Manage users",
-  "A0079" : "New password",
-  "A0080" : "Not logged in",
-  "A0081" : "Old password",
-  "A0082" : "Password has been changed",
-  "A0083" : "Password has been reset",
-  "A0084" : "Password must be at least 8 characters long.",
-  "A0085" : "Password reset is disabled",
-  "A0086" : "Passwords do not match.",
-  "A0087" : "Password",
-  "A0088" : "Remember",
-  "A0089" : "Reset password",
-  "A0090" : "Reset your password through this link:",
-  "A0091" : "Result",
-  "A0092" : "Sign up",
-  "A0093" : "Error! The code has expired.",
-  "A0094" : "Too many requests",
-  "A0095" : "Use 8 or more characters.",
-  "A0096" : "User already exists",
-  "A0097" : "Username",
-  "A0098" : "Verified",
-  "A0099" : "Wrong email address",
-  "A0100" : "Wrong password",
-  "A0101" : "Not verified",
-  "A0102" : "Change name",
-  "A0103" : "Change e-mail",
-  "A0104" : "New e-mail",
-  "A0105" : "Account not verified",
-  "A0106" : "The change will take effect as soon as the new email address has been confirmed",
-  "A0107" : "We can't say if the user is who they claim to be",
-  "A0108" : "Unable to send a link to this email",
-  "A0109" : "Password reset link",
-  "A0110" : "User is in default state",
-  "A0111" : "User has been archived",
-  "A0112" : "User has been banned",
-  "A0113" : "User has been locked",
-  "A0114" : "User is pending review",
-  "A0115" : "User has been suspended",
-  "A0116" : "Active",
-  "A0117" : "Archived",
-  "A0118" : "Banned",
-  "A0119" : "Locked",
-  "A0120" : "Pending",
-  "A0121" : "Suspended",
-  "A0122" : "New name",
-  "A0123" : "Invalid name",
-  "A0124" : "Name changed",
-  "A0125" : "Error changing name",
-  "A0126" : "Status changed",
-  "A0127" : "Error changing status",
-  "A0128" : "Administrator status cannot be changed",
-  "A0129" : "Access",
-  "A0130" : "Send",
-  "A0131" : "Permissions",
-  "A0132" : "A link to reset your password will be sent to this email.",
-  "A0133" : "Couldn't change password!",
-  "A0134" : "Change profile name",
-  "A0135" : "Change username",
-  "A0136" : "Create account",
-  "A0137" : "Send email with account confirmation link",
-  "A0138" : "Send email with password recovery link",
-  "A0139" : "Current password",
-  "A0140" : "Do you want to delete the selected records?",
-  "A0141" : "Enter your username and password.",
-  "A0142" : "Error! Could not delete!",
-  "A0143" : "Error! Could not register!",
-  "A0144" : "Error! Could not update!",
-  "A0145" : "Go back to login.",
-  "A0146" : "Invalid credential!",
-  "A0147" : "It wasn't possible to save!",
-  "A0148" : "Password changed successfully!",
-  "A0149" : "Repeat the password",
-  "A0150" : "Remove selection",
-  "A0151" : "Saved successfully!",
-  "A0152" : "Select all",
-  "A0153" : "Successfully deleted!",
-  "A0154" : "Successfully registered!",
-  "A0155" : "Successfully updated!",
-  "A0156" : "Reset",
-  "A0157" : "account",
-  "A0158" : "Invalid base route",
-  "A0159" : "Invalid destination route",
-  "A0160" : "Base route",
-  "A0161" : "Destination route",
-  "A0162" : "Account created successfully.",
-  "A0163" : "Contact us via chat so we can complete your registration.",
-  "A0164" : "Integrations",
-  "A0165" : "Enter",
-  "A0166" : "Resources",
-  "A0167" : "Hello!",
-  "A0168" : "Access your account here.",
-  "A0169" : "Enter a valid email address.",
-  "A0170" : "Enter your full name.",
-  "A0171" : "A code has been sent to your email.",
-  "A0172" : "Enter the code here to confirm your account.",
-  "A0173" : "Code",
-  "A0174" : "Verify",
-  "A0175" : "Error! The verification code could not be sent to the email provided.",
-  "A0176" : "Email verification",
-  "A0177" : "Enter the 6-digit code.",
-  "A0178" : "Error! Invalid code.",
-  "A0179" : "Error! A database failure has occurred.",
-  "A0180" : "No accounts were found with this email",
-  "A0181" : "Verification code",
-  "A0182" : "If it wasn't you, ignore this email.",
-  "A0183" : "Error! No accounts were found with this email.",
-  "A0184" : "Error! The password reset link could not be sent to the email provided.",
-  "A0185" : "Redefine password",
-  "A0186" : "Password changed successfully.",
-  "A0187" : "Error! Invalid link.",
-  "A0188" : "Error! The link has expired.",
-  "A0189" : "Error! Your email has not yet been verified.",
-  "A0190" : "Code sent successfully.",
-  "A0191" : "Error! Unable to send code.",
-  "A0192" : "Name changed successfully.",
-  "A0193" : "Email changed successfully.",
-  "A0194" : "Password changed successfully.",
-  "A0195" : "Delete account",
-  "A0196" : "This action is irreversible. All your data will be permanently deleted from the platform.",
-  "A0197" : "If you are sure you want to delete your account, check this option to confirm the deletion.",
-  "A0198" : "Account deleted",
-  "A0199" : "Account deleted successfully!",
-  "A0200" : "Your message",
-  "A0201" : "Send message",
-  "A0202" : "Do you have any questions or suggestions?",
-  "A0203" : "Error! Unable to delete account.",
-  "A0204" : "Your account is blocked.",
-  "A0205" : "Email changed successfully.",
-  "A0206" : "Sign Up Free",
-  "A0207" : "JavaScript library for application integration",
-  "A0208" : "Application integration",
-  "A0209" : "Integratize is a JavaScript library that allows you to integrate applications with a few lines of code, in addition to offering features to create automations in a simple and precise way.",
-  "A0210" : "Integratize is a platform specialized in integration and automation of digital processes, which offers strategic solutions for companies that want to optimize workflows and increase productivity.",
-  "A0211" : "Sign up for free and discover how our platform can help your company reach the next level of competitiveness.",
-  "A0212" : "After payment confirmation, we will send the file to your email.",
-  "A0213" : "Buy license",
-  "A0214" : "Answering questions",
-  "A0215" : "guarantee_seal",
-  "A0216" : "7 day guarantee",
-  "A0217" : "View product",
-  "A0218" : "Documentation",
-  "A0219" : "Tested",
-  "A0220" : "Price",
-  "A0221" : "Why buy the pack?",
-  "A0222" : "By purchasing the pack, you will save time and work in your processes, as the script takes care of carrying out the work automatically. This automation allows you to focus on other activities important to your business, while the script performs tasks efficiently and accurately.",
-  "A0223" : "Will I have technical support?",
-  "A0224" : "Yes. If you have any questions about installing and using the scripts, simply contact us through the customer service channels and the response will be sent to the email you provided at the time of purchase. Feel free to contact us!",
-  "A0225" : "Will I have a guarantee?",
-  "A0226" : "Yes. You have 7 days to request a refund through the platform where you made the purchase, in accordance with the applicable refund policies. If you have any questions or need more information, please contact us through the service channels. We are available to help!",
-  "A0227" : "library, application, integration, automation",
+  "A0001" : "Language",
+  "A0002" : "About",
+  "A0003" : "JavaScript library for application integration",
+  "A0004" : "Application integration",
+  "A0005" : "Integratize is a JavaScript library that allows you to integrate applications with a few lines of code, in addition to offering features to create automations in a simple and precise way.",
+  "A0006" : "After payment confirmation, we will send the file to your email.",
+  "A0007" : "Buy license",
+  "A0008" : "Documentation",
+  "A0009" : "Guarantee",
+  "A0010" : "7 days",
+  "A0011" : "Price",
+  "A0012" : "automation, integration, systems, application, processes",
+  "A0013" : "Answering questions",
+  "A0014" : "Why buy the pack?",
+  "A0015" : "By purchasing the pack, you will save time and work in your processes, as the script takes care of carrying out the work automatically. This automation allows you to focus on other activities important to your business, while the script performs tasks efficiently and accurately.",
+  "A0016" : "Will I have technical support?",
+  "A0017" : "Yes. If you have any questions about installing and using the scripts, simply contact us through the customer service channels and the response will be sent to the email you provided at the time of purchase. Feel free to contact us!",
+  "A0018" : "Will I have a guarantee?",
+  "A0019" : "Yes. You have 7 days to request a refund through the platform where you made the purchase, in accordance with the applicable refund policies. If you have any questions or need more information, please contact us through the service channels. We are available to help!",
+  "A0020" : "",
+  "A0021" : "",
+  "A0022" : "",
+  "A0023" : "",
+  "A0024" : "",
+  "A0025" : "",
+  "A0026" : "",
+  "A0027" : "",
+  "A0028" : "",
+  "A0029" : "",
+  "A0030" : "",
+  "A0031" : "",
+  "A0032" : "",
+  "A0033" : "",
+  "A0034" : "",
+  "A0035" : "",
+  "A0036" : "",
+  "A0037" : "",
+  "A0038" : "",
+  "A0039" : "",
+  "A0040" : "",
+  "A0041" : "",
+  "A0042" : "",
+  "A0043" : "",
+  "A0044" : "",
+  "A0045" : "",
+  "A0046" : "",
+  "A0047" : "",
+  "A0048" : "",
+  "A0049" : "",
+  "A0050" : "",
+  "A0051" : "",
+  "A0052" : "",
+  "A0053" : "",
+  "A0054" : "",
+  "A0055" : "",
+  "A0056" : "",
+  "A0057" : "",
+  "A0058" : "",
+  "A0059" : "",
+  "A0060" : "",
+  "A0061" : "",
+  "A0062" : "",
+  "A0063" : "",
+  "A0064" : "",
+  "A0065" : "",
+  "A0066" : "",
+  "A0067" : "",
+  "A0068" : "",
+  "A0069" : "",
+  "A0070" : "",
+  "A0071" : "",
+  "A0072" : "",
+  "A0073" : "",
+  "A0074" : "",
+  "A0075" : "",
+  "A0076" : "",
+  "A0077" : "",
+  "A0078" : "",
+  "A0079" : "",
+  "A0080" : "",
+  "A0081" : "",
+  "A0082" : "",
+  "A0083" : "",
+  "A0084" : "",
+  "A0085" : "",
+  "A0086" : "",
+  "A0087" : "",
+  "A0088" : "",
+  "A0089" : "",
+  "A0090" : "",
+  "A0091" : "",
+  "A0092" : "",
+  "A0093" : "",
+  "A0094" : "",
+  "A0095" : "",
+  "A0096" : "",
+  "A0097" : "",
+  "A0098" : "",
+  "A0099" : "",
+  "A0100" : "",
+  "A0101" : "",
+  "A0102" : "",
+  "A0103" : "",
+  "A0104" : "",
+  "A0105" : "",
+  "A0106" : "",
+  "A0107" : "",
+  "A0108" : "",
+  "A0109" : "",
+  "A0110" : "",
+  "A0111" : "",
+  "A0112" : "",
+  "A0113" : "",
+  "A0114" : "",
+  "A0115" : "",
+  "A0116" : "",
+  "A0117" : "",
+  "A0118" : "",
+  "A0119" : "",
+  "A0120" : "",
+  "A0121" : "",
+  "A0122" : "",
+  "A0123" : "",
+  "A0124" : "",
+  "A0125" : "",
+  "A0126" : "",
+  "A0127" : "",
+  "A0128" : "",
+  "A0129" : "",
+  "A0130" : "",
+  "A0131" : "",
+  "A0132" : "",
+  "A0133" : "",
+  "A0134" : "",
+  "A0135" : "",
+  "A0136" : "",
+  "A0137" : "",
+  "A0138" : "",
+  "A0139" : "",
+  "A0140" : "",
+  "A0141" : "",
+  "A0142" : "",
+  "A0143" : "",
+  "A0144" : "",
+  "A0145" : "",
+  "A0146" : "",
+  "A0147" : "",
+  "A0148" : "",
+  "A0149" : "",
+  "A0150" : "",
+  "A0151" : "",
+  "A0152" : "",
+  "A0153" : "",
+  "A0154" : "",
+  "A0155" : "",
+  "A0156" : "",
+  "A0157" : "",
+  "A0158" : "",
+  "A0159" : "",
+  "A0160" : "",
+  "A0161" : "",
+  "A0162" : "",
+  "A0163" : "",
+  "A0164" : "",
+  "A0165" : "",
+  "A0166" : "",
+  "A0167" : "",
+  "A0168" : "",
+  "A0169" : "",
+  "A0170" : "",
+  "A0171" : "",
+  "A0172" : "",
+  "A0173" : "",
+  "A0174" : "",
+  "A0175" : "",
+  "A0176" : "",
+  "A0177" : "",
+  "A0178" : "",
+  "A0179" : "",
+  "A0180" : "",
+  "A0181" : "",
+  "A0182" : "",
+  "A0183" : "",
+  "A0184" : "",
+  "A0185" : "",
+  "A0186" : "",
+  "A0187" : "",
+  "A0188" : "",
+  "A0189" : "",
+  "A0190" : "",
+  "A0191" : "",
+  "A0192" : "",
+  "A0193" : "",
+  "A0194" : "",
+  "A0195" : "",
+  "A0196" : "",
+  "A0197" : "",
+  "A0198" : "",
+  "A0199" : "",
+  "A0200" : "",
+  "A0201" : "",
+  "A0202" : "",
+  "A0203" : "",
+  "A0204" : "",
+  "A0205" : "",
+  "A0206" : "",
+  "A0207" : "",
+  "A0208" : "",
+  "A0209" : "",
+  "A0210" : "",
+  "A0211" : "",
+  "A0212" : "",
+  "A0213" : "",
+  "A0214" : "",
+  "A0215" : "",
+  "A0216" : "",
+  "A0217" : "",
+  "A0218" : "",
+  "A0219" : "",
+  "A0220" : "",
+  "A0221" : "",
+  "A0222" : "",
+  "A0223" : "",
+  "A0224" : "",
+  "A0225" : "",
+  "A0226" : "",
+  "A0227" : "",
   "A0228" : "",
   "A0229" : "",
   "A0230" : ""
