--- a/translations/pt-BR.json
+++ b/translations/pt-BR.json
@@ -1,231 +1,231 @@
 {
-  "A0001" : "400 Requisição inválida",
-  "A0002" : "401 Não autorizado",
-  "A0003" : "403 Proibido",
-  "A0004" : "404 Não encontrado",
-  "A0005" : "405 Método não permitido",
-  "A0006" : "500 Erro interno do servidor",
-  "A0007" : "Acesso negado devido a regras de autenticação.",
-  "A0008" : "Houve um erro na sua requisição.",
-  "A0009" : "Você não tem permissão para acessar a URL solicitada neste servidor.",
-  "A0010" : "O servidor encontrou um erro interno ou configuração incorreta e não conseguiu concluir sua requisição.",
-  "A0011" : "O caminho solicitado existe. Mas o método de requisição não é permitido neste caminho.",
-  "A0012" : "A URL solicitada não foi encontrada neste servidor.",
-  "A0013" : "Este campo é obrigatório.",
-  "A0014" : "Descrição",
-  "A0015" : "Baixar",
-  "A0016" : "Sair",
-  "A0017" : "Início",
-  "A0018" : "Idioma",
-  "A0019" : "Nome",
-  "A0020" : "Pesquisar",
-  "A0021" : "Configurações",
-  "A0022" : "Enviar",
-  "A0023" : "Usuário",
-  "A0024" : "Valor",
-  "A0025" : "Carregando...",
-  "A0026" : "Erro",
-  "A0027" : "Item",
-  "A0028" : "Itens",
-  "A0029" : "Tamanho da página",
-  "A0030" : "Primeira",
-  "A0031" : "Primeira página",
-  "A0032" : "Última",
-  "A0033" : "Última página",
-  "A0034" : "Anterior",
-  "A0035" : "Página anterior",
-  "A0036" : "Próxima",
-  "A0037" : "Próxima página",
-  "A0038" : "Filtrar coluna",
-  "A0039" : "Nome do filtro",
-  "A0040" : "Filtrar por:",
-  "A0041" : "Fechar",
-  "A0042" : "Cancelar",
-  "A0043" : "Confirmar",
-  "A0044" : "Adicionar",
-  "A0045" : "Excluir",
-  "A0046" : "Editar",
-  "A0047" : "Sim",
-  "A0048" : "Não",
-  "A0049" : "Salvar",
-  "A0050" : "Criar",
-  "A0051" : "Sobre",
-  "A0052" : "Ajuda",
-  "A0053" : "Opções",
-  "A0054" : "Versão",
-  "A0055" : "Categoria",
-  "A0056" : "Encontre APIs públicas e privadas por meio do mecanismo de pesquisa.",
-  "A0057" : "Minhas APIs",
-  "A0058" : "Adicionar API",
-  "A0059" : "Conta",
-  "A0060" : "Ação",
-  "A0061" : "Um link foi enviado para o seu e-mail.",
-  "A0062" : "Alterar idioma",
-  "A0063" : "Alterar senha",
-  "A0064" : "Link de confirmação",
-  "A0065" : "Confirmar email",
-  "A0066" : "Confirme sua senha.",
-  "A0067" : "Confirme sua inscrição através deste link:",
-  "A0068" : "Criar nova conta",
-  "A0069" : "Erro! Este e-mail já está sendo usado.",
-  "A0070" : "O endereço de e-mail foi verificado",
-  "A0071" : "E-mail não verificado",
-  "A0072" : "Informe seu e-mail e enviaremos para você as instruções para redefinir sua senha.",
-  "A0073" : "Esqueceu sua senha?",
-  "A0074" : "Nome completo",
-  "A0075" : "Endereço de e-mail inválido",
-  "A0076" : "Senha inválida",
-  "A0077" : "Token inválido",
-  "A0078" : "Gerenciar usuários",
-  "A0079" : "Nova senha",
-  "A0080" : "Não logado",
-  "A0081" : "Senha antiga",
-  "A0082" : "A senha foi alterada",
-  "A0083" : "A senha foi redefinida",
-  "A0084" : "A senha deve ter pelo menos 8 caracteres.",
-  "A0085" : "A redefinição de senha está desativada",
-  "A0086" : "As senhas não coincidem.",
-  "A0087" : "Senha",
-  "A0088" : "Lembrar",
-  "A0089" : "Redefinir senha",
-  "A0090" : "Redefina sua senha através deste link:",
-  "A0091" : "Resultado",
-  "A0092" : "Inscrever-se",
-  "A0093" : "Erro! O código expirou.",
-  "A0094" : "Muitas requisições",
-  "A0095" : "Use 8 ou mais caracteres.",
-  "A0096" : "Usuário já existe",
-  "A0097" : "Nome de usuário",
-  "A0098" : "Verificado",
-  "A0099" : "Endereço de email incorreto",
-  "A0100" : "Senha incorreta",
-  "A0101" : "Não verificado",
-  "A0102" : "Alterar nome",
-  "A0103" : "Alterar e-mail",
-  "A0104" : "Novo e-mail",
-  "A0105" : "Conta não verificada",
-  "A0106" : "A alteração entrará em vigor assim que o novo endereço de e-mail for confirmado",
-  "A0107" : "Não podemos dizer se o usuário é quem afirma ser",
-  "A0108" : "Não foi possível enviar um link para este e-mail",
-  "A0109" : "Link de redefinição de senha",
-  "A0110" : "O usuário está no estado padrão",
-  "A0111" : "O usuário foi arquivado",
-  "A0112" : "O usuário foi banido",
-  "A0113" : "O usuário foi bloqueado",
-  "A0114" : "O usuário está com revisão pendente",
-  "A0115" : "O usuário foi suspenso",
-  "A0116" : "Ativo",
-  "A0117" : "Arquivado",
-  "A0118" : "Banido",
-  "A0119" : "Bloqueado",
-  "A0120" : "Pendente",
-  "A0121" : "Suspenso",
-  "A0122" : "Novo nome",
-  "A0123" : "Nome inválido",
-  "A0124" : "Nome alterado",
-  "A0125" : "Erro ao alterar o nome",
-  "A0126" : "Status alterado",
-  "A0127" : "Erro ao alterar o status",
-  "A0128" : "O status do administrador não pode ser alterado",
-  "A0129" : "Acessar",
-  "A0130" : "Mandar",
-  "A0131" : "Permissões",
-  "A0132" : "Um link para redefinir sua senha será enviado para este e-mail.",
-  "A0133" : "Não foi possível alterar a senha!",
-  "A0134" : "Alterar nome do perfil",
-  "A0135" : "Alterar nome de usuário",
-  "A0136" : "Criar conta",
-  "A0137" : "Enviar e-mail com link de confirmação da conta",
-  "A0138" : "Enviar e-mail com link de recuperação de senha",
-  "A0139" : "Senha atual",
-  "A0140" : "Deseja excluir os registros selecionados?",
-  "A0141" : "Digite seu nome de usuário e senha.",
-  "A0142" : "Erro! Não foi possível excluir!",
-  "A0143" : "Erro! Não foi possível registrar!",
-  "A0144" : "Erro! Não foi possível atualizar!",
-  "A0145" : "Voltar para o login.",
-  "A0146" : "Credencial inválida!",
-  "A0147" : "Não foi possível salvar!",
-  "A0148" : "Senha alterada com sucesso!",
-  "A0149" : "Repita a senha",
-  "A0150" : "Remover seleção",
-  "A0151" : "Salvo com sucesso!",
-  "A0152" : "Selecionar tudo",
-  "A0153" : "Excluído com sucesso!",
-  "A0154" : "Registrado com sucesso!",
-  "A0155" : "Atualizado com sucesso!",
-  "A0156" : "Redefinir",
-  "A0157" : "conta",
-  "A0158" : "Rota base inválida",
-  "A0159" : "Rota de destino inválida",
-  "A0160" : "Rota base",
-  "A0161" : "Rota de destino",
-  "A0162" : "Conta criada com sucesso.",
-  "A0163" : "Entre em contato conosco via chat para que possamos concluir seu cadastro.",
-  "A0164" : "Integrações",
-  "A0165" : "Entra",
-  "A0166" : "Recursos",
-  "A0167" : "Olá!",
-  "A0168" : "Acesse sua conta aqui.",
-  "A0169" : "Digite um endereço de e-mail válido.",
-  "A0170" : "Digite seu nome completo.",
-  "A0171" : "Um código foi enviado para seu e-mail.",
-  "A0172" : "Digite o código aqui para confirmar sua conta.",
-  "A0173" : "Código",
-  "A0174" : "Verificar",
-  "A0175" : "Erro! Não foi possível enviar o código de verificação para o e-mail fornecido.",
-  "A0176" : "Verificação de e-mail",
-  "A0177" : "Digite o código de 6 dígitos.",
-  "A0178" : "Erro! Código inválido.",
-  "A0179" : "Erro! Ocorreu uma falha no banco de dados.",
-  "A0180" : "Nenhuma conta foi encontrada com este e-mail",
-  "A0181" : "Código de verificação",
-  "A0182" : "Se não foi você, ignore este e-mail.",
-  "A0183" : "Erro! Nenhuma conta foi encontrada com este e-mail.",
-  "A0184" : "Erro! O link de redefinição de senha não pôde ser enviado para o e-mail fornecido.",
-  "A0185" : "Redefinir senha",
-  "A0186" : "Senha alterada com sucesso.",
-  "A0187" : "Erro! Link inválido.",
-  "A0188" : "Erro! O link expirou.",
-  "A0189" : "Erro! Seu e-mail ainda não foi verificado.",
-  "A0190" : "Código enviado com sucesso.",
-  "A0191" : "Erro! Não foi possível enviar o código.",
-  "A0192" : "Nome alterado com sucesso.",
-  "A0193" : "E-mail alterado com sucesso.",
-  "A0194" : "Senha alterada com sucesso.",
-  "A0195" : "Excluir conta",
-  "A0196" : "Esta ação é irreversível. Todos os seus dados serão excluídos permanentemente da plataforma.",
-  "A0197" : "Se tiver certeza de que deseja excluir sua conta, marque esta opção para confirmar a exclusão.",
-  "A0198" : "Conta excluída",
-  "A0199" : "Conta excluída com sucesso!",
-  "A0200" : "Sua mensagem",
-  "A0201" : "Enviar mensagem",
-  "A0202" : "Você tem alguma pergunta ou sugestão?",
-  "A0203" : "Erro! Não foi possível excluir a conta.",
-  "A0204" : "Sua conta está bloqueada.",
-  "A0205" : "E-mail alterado com sucesso.",
-  "A0206" : "Inscreva-se Gratuitamente",
-  "A0207" : "Biblioteca JavaScript para integração de aplicativos",
-  "A0208" : "Integração de aplicativos",
-  "A0209" : "Integratize é uma biblioteca JavaScript que permite integrar aplicações com poucas linhas de código, além de oferecer recursos para criar automações de forma simples e precisa.",
-  "A0210" : "Integratize é uma plataforma especializada em integração e automação de processos digitais, que oferece soluções estratégicas para empresas que desejam otimizar fluxos de trabalho e aumentar a produtividade.",
-  "A0211" : "Inscreva-se gratuitamente e descubra como nossa plataforma pode ajudar sua empresa a alcançar o próximo nível de competitividade.",
-  "A0212" : "Após a confirmação do pagamento, enviaremos o arquivo para seu e-mail.",
-  "A0213" : "Comprar licença",
-  "A0214" : "Respondendo perguntas",
-  "A0215" : "selo_garantia",
-  "A0216" : "Garantia de 7 dias",
-  "A0217" : "Ver produto",
-  "A0218" : "Documentação",
-  "A0219" : "Testado",
-  "A0220" : "Preço",
-  "A0221" : "Por que comprar o pack?",
-  "A0222" : "Ao adquirir o pack, você economizará tempo e trabalho em seus processos, pois o script se encarrega de realizar o trabalho de forma automática. Essa automação permite que você se concentre em outras atividades importantes para o seu negócio, enquanto o script executa as tarefas com eficiência e precisão.",
-  "A0223" : "Terei suporte técnico?",
-  "A0224" : "Sim. Caso tenha alguma dúvida sobre instalação e utilização dos scripts, basta entrar em contato conosco pelos canais de atendimento e a resposta será enviada para o e-mail que você informou no momento da compra. Sinta-se à vontade para nos contatar!",
-  "A0225" : "Terei uma garantia?",
-  "A0226" : "Sim. Você tem 7 dias para solicitar o reembolso através da plataforma onde realizou a compra, de acordo com as políticas de reembolso aplicáveis. Caso tenha alguma dúvida ou precise de mais informações, entre em contato conosco pelos canais de atendimento. Estamos disponíveis para ajudar!",
-  "A0227" : "biblioteca, aplicação, integração, automação",
+  "A0001" : "Idioma",
+  "A0002" : "Sobre",
+  "A0003" : "Biblioteca JavaScript para integração de aplicativos",
+  "A0004" : "Integração de aplicativos",
+  "A0005" : "Integratize é uma biblioteca JavaScript que permite integrar aplicações com poucas linhas de código, além de oferecer recursos para criar automações de forma simples e precisa.",
+  "A0006" : "Após a confirmação do pagamento, enviaremos o arquivo para seu e-mail.",
+  "A0007" : "Comprar licença",
+  "A0008" : "Documentação",
+  "A0009" : "Garantia",
+  "A0010" : "7 dias",
+  "A0011" : "Preço",
+  "A0012" : "automação, integração, sistemas, application, processos",
+  "A0013" : "Respondendo perguntas",
+  "A0014" : "Por que comprar o pack?",
+  "A0015" : "Ao adquirir o pack, você economizará tempo e trabalho em seus processos, pois o script se encarrega de realizar o trabalho de forma automática. Essa automação permite que você se concentre em outras atividades importantes para o seu negócio, enquanto o script executa as tarefas com eficiência e precisão.",
+  "A0016" : "Terei suporte técnico?",
+  "A0017" : "Sim. Caso tenha alguma dúvida sobre instalação e utilização dos scripts, basta entrar em contato conosco pelos canais de atendimento e a resposta será enviada para o e-mail que você informou no momento da compra. Sinta-se à vontade para nos contatar!",
+  "A0018" : "Terei uma garantia?",
+  "A0019" : "Sim. Você tem 7 dias para solicitar o reembolso através da plataforma onde realizou a compra, de acordo com as políticas de reembolso aplicáveis. Caso tenha alguma dúvida ou precise de mais informações, entre em contato conosco pelos canais de atendimento. Estamos disponíveis para ajudar!",
+  "A0020" : "",
+  "A0021" : "",
+  "A0022" : "",
+  "A0023" : "",
+  "A0024" : "",
+  "A0025" : "",
+  "A0026" : "",
+  "A0027" : "",
+  "A0028" : "",
+  "A0029" : "",
+  "A0030" : "",
+  "A0031" : "",
+  "A0032" : "",
+  "A0033" : "",
+  "A0034" : "",
+  "A0035" : "",
+  "A0036" : "",
+  "A0037" : "",
+  "A0038" : "",
+  "A0039" : "",
+  "A0040" : "",
+  "A0041" : "",
+  "A0042" : "",
+  "A0043" : "",
+  "A0044" : "",
+  "A0045" : "",
+  "A0046" : "",
+  "A0047" : "",
+  "A0048" : "",
+  "A0049" : "",
+  "A0050" : "",
+  "A0051" : "",
+  "A0052" : "",
+  "A0053" : "",
+  "A0054" : "",
+  "A0055" : "",
+  "A0056" : "",
+  "A0057" : "",
+  "A0058" : "",
+  "A0059" : "",
+  "A0060" : "",
+  "A0061" : "",
+  "A0062" : "",
+  "A0063" : "",
+  "A0064" : "",
+  "A0065" : "",
+  "A0066" : "",
+  "A0067" : "",
+  "A0068" : "",
+  "A0069" : "",
+  "A0070" : "",
+  "A0071" : "",
+  "A0072" : "",
+  "A0073" : "",
+  "A0074" : "",
+  "A0075" : "",
+  "A0076" : "",
+  "A0077" : "",
+  "A0078" : "",
+  "A0079" : "",
+  "A0080" : "",
+  "A0081" : "",
+  "A0082" : "",
+  "A0083" : "",
+  "A0084" : "",
+  "A0085" : "",
+  "A0086" : "",
+  "A0087" : "",
+  "A0088" : "",
+  "A0089" : "",
+  "A0090" : "",
+  "A0091" : "",
+  "A0092" : "",
+  "A0093" : "",
+  "A0094" : "",
+  "A0095" : "",
+  "A0096" : "",
+  "A0097" : "",
+  "A0098" : "",
+  "A0099" : "",
+  "A0100" : "",
+  "A0101" : "",
+  "A0102" : "",
+  "A0103" : "",
+  "A0104" : "",
+  "A0105" : "",
+  "A0106" : "",
+  "A0107" : "",
+  "A0108" : "",
+  "A0109" : "",
+  "A0110" : "",
+  "A0111" : "",
+  "A0112" : "",
+  "A0113" : "",
+  "A0114" : "",
+  "A0115" : "",
+  "A0116" : "",
+  "A0117" : "",
+  "A0118" : "",
+  "A0119" : "",
+  "A0120" : "",
+  "A0121" : "",
+  "A0122" : "",
+  "A0123" : "",
+  "A0124" : "",
+  "A0125" : "",
+  "A0126" : "",
+  "A0127" : "",
+  "A0128" : "",
+  "A0129" : "",
+  "A0130" : "",
+  "A0131" : "",
+  "A0132" : "",
+  "A0133" : "",
+  "A0134" : "",
+  "A0135" : "",
+  "A0136" : "",
+  "A0137" : "",
+  "A0138" : "",
+  "A0139" : "",
+  "A0140" : "",
+  "A0141" : "",
+  "A0142" : "",
+  "A0143" : "",
+  "A0144" : "",
+  "A0145" : "",
+  "A0146" : "",
+  "A0147" : "",
+  "A0148" : "",
+  "A0149" : "",
+  "A0150" : "",
+  "A0151" : "",
+  "A0152" : "",
+  "A0153" : "",
+  "A0154" : "",
+  "A0155" : "",
+  "A0156" : "",
+  "A0157" : "",
+  "A0158" : "",
+  "A0159" : "",
+  "A0160" : "",
+  "A0161" : "",
+  "A0162" : "",
+  "A0163" : "",
+  "A0164" : "",
+  "A0165" : "",
+  "A0166" : "",
+  "A0167" : "",
+  "A0168" : "",
+  "A0169" : "",
+  "A0170" : "",
+  "A0171" : "",
+  "A0172" : "",
+  "A0173" : "",
+  "A0174" : "",
+  "A0175" : "",
+  "A0176" : "",
+  "A0177" : "",
+  "A0178" : "",
+  "A0179" : "",
+  "A0180" : "",
+  "A0181" : "",
+  "A0182" : "",
+  "A0183" : "",
+  "A0184" : "",
+  "A0185" : "",
+  "A0186" : "",
+  "A0187" : "",
+  "A0188" : "",
+  "A0189" : "",
+  "A0190" : "",
+  "A0191" : "",
+  "A0192" : "",
+  "A0193" : "",
+  "A0194" : "",
+  "A0195" : "",
+  "A0196" : "",
+  "A0197" : "",
+  "A0198" : "",
+  "A0199" : "",
+  "A0200" : "",
+  "A0201" : "",
+  "A0202" : "",
+  "A0203" : "",
+  "A0204" : "",
+  "A0205" : "",
+  "A0206" : "",
+  "A0207" : "",
+  "A0208" : "",
+  "A0209" : "",
+  "A0210" : "",
+  "A0211" : "",
+  "A0212" : "",
+  "A0213" : "",
+  "A0214" : "",
+  "A0215" : "",
+  "A0216" : "",
+  "A0217" : "",
+  "A0218" : "",
+  "A0219" : "",
+  "A0220" : "",
+  "A0221" : "",
+  "A0222" : "",
+  "A0223" : "",
+  "A0224" : "",
+  "A0225" : "",
+  "A0226" : "",
+  "A0227" : "",
   "A0228" : "",
   "A0229" : "",
   "A0230" : ""
